--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,18 @@ vendor
 # coverage
 .coverprofile
 gover.coverprofile
+
+# Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
