--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 language: go
 
 go:
-  - 1.8.x
+  - 1.9.x
   - tip
 
 services:
@@ -15,12 +15,12 @@ notifications:
     on_failure: always
 
 before_install:
-  - go get github.com/Masterminds/glide
+  - go get -u github.com/golang/dep/cmd/dep
   - go get github.com/modocache/gover
   - go get github.com/mattn/goveralls
 
 install:
-  - glide install -v
+  - dep ensure
 
 script:
   - go build .
